force-app/main/default/objects/custom_create374__c/custom_create374__c.object-meta.xml
<CustomObject>
    <label>Custom created object374</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects374</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>