force-app/main/default/objects/custom_create374__c/fields/custom_create_374field579__c.field-meta.xml
<CustomField>
    <fullName>custom_create_374field579__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 374field579</label>
    <type>Checkbox</type>
</CustomField>